fixed search bar issue making page overflow

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -57,6 +57,22 @@ textarea.materialize-textarea:focus:not([readonly]) + label,
   color: #e53935 !important;
 }
 
+input:not([type]).validate + label,
+input[type='text']:not(.browser-default).validate + label,
+input[type='password']:not(.browser-default).validate + label,
+input[type='email']:not(.browser-default).validate + label,
+input[type='url']:not(.browser-default).validate + label,
+input[type='time']:not(.browser-default).validate + label,
+input[type='date']:not(.browser-default).validate + label,
+input[type='datetime']:not(.browser-default).validate + label,
+input[type='datetime-local']:not(.browser-default).validate + label,
+input[type='tel']:not(.browser-default).validate + label,
+input[type='number']:not(.browser-default).validate + label,
+input[type='search']:not(.browser-default).validate + label,
+textarea.materialize-textarea.validate + label {
+  width: calc(100% - 3rem) !important;
+}
+
 // 0 - 0px
 // 1 - 4px
 // 2 - 8px
